--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #22254b;
+  color: white;
+  display:flex;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  margin:0;
+}
+
+header {
+  background-color: #373b69;
+  padding: 1rem;
+  display:flex;
+  justify-content: flex-end;
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid #22254b;
+  border-radius: 50px;
+  color: white;
+  font-family: inherit;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+}
+
+.search:focus {
+  outline: 0;
+}
+
+.movie-container {
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.movie {
+  background-color: #363b69;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0.1);
+  overflow:hidden;
+  position: relative;
+  width: 300px;
+  margin: 1rem;
+}
+
+.movie img {
+  max-width:100%;
+}
+
+.movie-info {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 10px 0px 10px;
+}
+
+.margin-info h3 {
+  margin: 0;
+}
+
+.movie-over {
+  background-color: #fff;
+  padding:1rem;
+  color: #22254b;
+  position:absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  max-height: 100%;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over {
+  transform: translateY(0%);
+}
+
+.tag {
+  background-color: #22254b;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+.tag.green {
+  color: green;
+}
+
+.tag.orange {
+  color: orange;
+}
+
+.tag.red {
+  color: red;
 }
